@@ -3,6 +3,8 @@ body, html {
     color: black;
     font-family: sans-serif;
     font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 pre, table {
@@ -26,12 +28,16 @@ form, #content, #navigation, .searchresults {
     margin: 0 1em;
 }
 
-#navigation {
+.header {
     position: relative;
     background-color: white;
+    z-index: 1;
+    padding: 1em 0 0 0;
+}
+
+#navigation {
     border-bottom: 1px solid #ccc;
     padding: 0.25em 0 0.5em 0;
-    z-index: 1;
 }
 
 #serverstatus {
@@ -140,9 +146,7 @@ form#search h1 a {
 }
 
 form#search {
-    background-color: white;
     text-align: center;
-    z-index: 1;
 }
 
 form#search input {
@@ -470,7 +474,7 @@ table.projectinfos .closed .value:after,
 }
 
 div.iframe {
-    margin: 0.5em 0 0 0;
+    margin: 0;
 }
 
 div.iframe, iframe {
